--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Felipe Miranda",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "js-base64": "^2.4.8",
+    "request": "^2.87.0"
   }
 }
