--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "js-base64": "^2.4.8",
+    "moip-sdk-node": "^1.2.1",
     "request": "^2.87.0"
   }
 }
